--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,142 @@
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
 
+:root{
+    --font-geral: 'Noto Sans', sans-serif;
+    --font-title: 'Poppins', sans-serif;
+
+}
+
+*{
+    margin: 0;
+    padding: 0;
+
+}
+header{
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    position: relative;
+}
+
+.image-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, .8);
+}
+
+.image-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.7;
+    animation: zoom 8s;
+}
+
+.banner{
+    position: absolute;
+    left: 10%;
+    top: 30%;
+}
+@keyframes zoom {0%
+
+    {
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+@keyframes texto {
+    0%{
+        transform: translatey(7rem) rotateY(35deg);
+    
+    }
+    100%{
+        transform: translateY(0) rotateY(0deg);
+        opacity: 1;
+    }
+}
+
+.banner h1{
+    font-family: var(--font-title);
+    color: #fff;
+    font-size: 4.5rem;
+    font-weight: 300;
+    opacity: 0;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.658) ;
+    line-height: 3rem;
+    margin-bottom: 1rem;
+    animation: texto 2s 0.9s forwards;
+}
+
+
+.banner p {
+    font-family: var(--font-geral);
+    font-size: 2rem;
+    font-weight: 400;
+    margin-bottom: 2rem;
+    opacity: 0;
+    text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.349) ;
+    animation: texto 2s 0.9s forwards;
+}
+
+.banner button{
+    background: #8E2DE2;  
+    background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  
+    background: linear-gradient(to right, #4A00E0, #8E2DE2);
+    border: none;
+    font-size: 1rem;
+    font-family: var(--font-geral);
+    font-weight: 200;
+    padding: 8px 15px;
+    border-radius: 20px;
+    color: #fff;
+    opacity: 0;
+    animation: texto 2s .9s forwards;
+
+}
+
+.banner button a {
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+
+.logo-lateral {
+    position: absolute;
+    z-index: 1;
+}
+
+.logo-lateral img{
+    width: 80px;
+    opacity: 2;
+}
+
+.icon :nth-child(1){
+    position: absolute;
+    right: 10%;
+    top: 10px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.cadastro-btn{
+    position: absolute;
+    z-index: 1;
+    right: 2%;
+    top: 10px;
+}
+
+.banner button:hover{
+    background: #8E2DE2;  
+    background: -webkit-linear-gradient(to left, #4A00E0, #8E2DE2);  
+    background: linear-gradient(to left, #4A00E0, #8E2DE2);
+    transition: transform 0.7s ease ease-in-out;
+
+}
+
