--- a/css/style.css
+++ b/css/style.css
@@ -199,30 +199,36 @@ body{
 header{
     width: 100%;
     height: 100vh;
-    overflow-x: hidden;
     position: relative;
 }
 
-.image-wrapper{
-    width: 100%;
-    height: 100%;
+
+.carrossel{
     overflow: hidden;
-    background-color: rgba(0, 0, 0, .8);
+    height:100%;
+    width: 100%;
 }
 
-.image-wrapper img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.7;
-    animation: zoom 8s;
+.container-carrossel{
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(0);
 }
+
+.carrossel img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+
 
 .banner{
     position: absolute;
     left: 10%;
     top: 30%;
 }
+
 @keyframes zoom {0%
 
     {
