--- a/css/body-produtos.css
+++ b/css/body-produtos.css
@@ -53,7 +53,7 @@
 
 }
 
-.produtos h1{
+.produtos #prod{
     font-family: var(--font-title);
     margin-top: 2.2rem;
     font-size: 2.5rem;
@@ -125,7 +125,7 @@
     visibility: 0;
     font-family: var(--font-geral);
     font-weight: 400;
-    font-size: .8rem;
+    font-size: 1em;
     word-wrap:normal; 
     line-height: 1.16rem;
     width: 90%;
