--- a/css/header.css
+++ b/css/header.css
@@ -32,7 +32,8 @@
 }
 
 body{
-    background-color: #ac806444;
+    background-color: var(--clr-white);
+    overflow-x: hidden ;
 }
 /******************** MENU BURGUER *****************/
 .burguer{
@@ -201,34 +202,6 @@ header{
     height: 100vh;
     position: relative;
 }
-
-
-.carrossel{
-    overflow: hidden;
-    height:100%;
-    width: 100%;
-}
-
-.container-carrossel{
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    transform: translateX(0);
-}
-
-.carrossel img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-
-
-.banner{
-    position: absolute;
-    left: 10%;
-    top: 30%;
-}
-
 @keyframes zoom {0%
 
     {
@@ -249,6 +222,36 @@ header{
         opacity: 1;
     }
 }
+
+.carrossel{
+    overflow: hidden;
+    height:100%;
+    width: 100%;
+    
+}
+
+.container-carrossel{
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(0);
+}
+
+.carrossel img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    animation: zoom  10s ;
+}
+
+
+
+.banner{
+    position: absolute;
+    left: 10%;
+    top: 30%;
+}
+
+
 
 .banner h1{
     font-family: var(--ff-logo);
@@ -304,6 +307,46 @@ header{
     transition: transform 0.7s ease-in-out;
 
 }
+
+/*mais*/
+
+.mais{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10em;
+    margin-top: 2em;
+    background-color: var(--clr-cream);
+    
+}
+
+.div-mais{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+}
+
+.div-mais p, a{
+    font-size: 1.2em;
+    color: black;
+    font-family: var(--font-geral);
+}
+
+.div-mais a {
+    margin-top: .6em;
+    padding:.2em .6em;
+    border: 1px solid;
+    border-radius: .7em;
+}
+
+.div-mais a:hover{
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.537);
+
+}
 /*********************** FIM HEADER ***************************/
 
 /************************ SIDEBAR *************************/
@@ -333,7 +376,7 @@ header{
 }
 
 .social-media i {
-    color: var(--cor0);
+    color: var(--cor3);
     width: 2.5rem;
     height: 2.5rem;
     font-size: 2rem;
@@ -348,7 +391,18 @@ header{
 }
 
 .social-media i:hover{
-    color: var(--cor1);
-    background-color: var(--cor0);
-    transition: 0.6s ease-in-out;
+    color: var(--cor0);
+    transition: 0.3s ease-in-out;
+}
+
+.user{
+    position: absolute;
+    font-size: 2em;
+    right: 1em;
+    top: .7em;
+
+}
+
+.user i {
+    color: var(--cor0);
 }
