--- a/css/body-sobre.css
+++ b/css/body-sobre.css
@@ -33,6 +33,7 @@ html {
     width: 100%;
     height: 25em;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 3em;
 }
@@ -41,7 +42,7 @@ html {
 .container-sobre {
     display: flex;
     width: 100%;
-    max-width: 1300px;
+
     height: 100%;
     justify-content: space-between;
     align-items: center;
