--- a/css/parcerias.css
+++ b/css/parcerias.css
@@ -10,6 +10,7 @@
     --cor2: #bd7938;
     --cor3: #662912;
     --cor4: #C2651A;
+    --cor5: #c6e5b1ab;
     --clr-lighttest-brown: #ac7f64;
     --ff-primary: "Nunito", Helvetica, Arial, sans-serif;
     --ff-logo: "Brixton", sans-serif;
@@ -35,7 +36,7 @@
     width: 100%;
     height: 38vh;
     padding: .6em 0 0 0;
-    background-color: var(--cor1);
+    background-color: var(--cor5);
     margin-bottom: 3em;
     box-shadow: 2px 0px 2px 1px rgba(0, 0, 0, 0.078);
    
