--- a/css/body-produtos.css
+++ b/css/body-produtos.css
@@ -68,17 +68,16 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     width: 100%;
-    height: 100%;
-    
+    margin-top: 1em;
     
 }
 
 
 
 .produto {
-    width: 20%;
-    height: 70%;
-    margin: auto;
+    width: 18em;
+    height: 30em;
+    margin-top: 2em;
     position: relative;
     background-color:var(--clr-lighttest-brown);
     border-radius: .3rem;
