--- a/css/info-produtos.css
+++ b/css/info-produtos.css
@@ -1,5 +1,115 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
+
+:root{
+    --font-geral: 'Noto Sans', sans-serif;
+    --font-title: 'Poppins', sans-serif;
+    --cor0: #2f1912;
+    --cor1: #f5eaca;
+    --cor2: #bd7938;
+    --cor3: #662912;
+    --cor4: #C2651A;
+    --cor5: #c6e5b1ab;
+    --clr-lighttest-brown: #ac8064;
+    --ff-primary: "Nunito", Helvetica, Arial, sans-serif;
+    --ff-logo: "Brixton", sans-serif;
+    --clr-cream: #f4e5b8;
+    --clr-white: #f5f5f5c4;
+        
+}
+
+@font-face {
+    font-family: "Brixton";
+    src: url("attentica-ultralight.ttf") format('opentype');
+} 
+
+*, *::before, *::after{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+
+.bebidas-geladas, .bebidas-quentes, .sobremesas{
+    width: 100%;
+    background-color: var(--cor0);
+    margin: 3em 0;
+
+}
+
+.container-geladas , .container-quentes, .container-sobremesas{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 2em;
+    
+}
+
+.geladas, .quentes, .sobremesa{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    width: 22em;
+    background-color: var(--clr-white);
+    padding: 1em 2em;
+    margin-right: 2em;
+    margin-bottom: 2em;
+    border-radius: .5em;
+    box-shadow: 2px 3px 2px 1px rgba(0, 0, 0, 0.212);
+
+}
+
+.content{
+    padding: .5em 0;
+}
+
+sup{
+    font-family: var(--ff-primary);
+    font-size: .7em;
+    font-weight: 400;
+    font-style:oblique;
+    margin-left: .5em;
+}
+.content p{
+    font-family: var(--font-geral);
+}
+
+.content h3{
+    padding-bottom: .5em;
+    font-family: var(--font-title);
+    
+}
+.body-geral span, a {
+    padding: .3em;
+    font-family: var(--ff-primary);
+    text-decoration: none;
+    color: black;
+}
+
+
+.img-div{
+    width: 16em;
+    height: 20em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.img-div img{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.body-geral h1{
+    font-family: var(--ff-logo);
+    font-size: 2em;
+    display: flex;
+    padding-top: 1em;
+    justify-content: center;
+    color: white;
 }
