--- a/css/header.css
+++ b/css/header.css
@@ -23,7 +23,7 @@
     src: url("attentica-ultralight.ttf") format('opentype');
 } 
 
-*{
+*, *::before, *::after{
     margin: 0;
     padding: 0;
     list-style: none;
@@ -36,23 +36,13 @@ body{
     overflow-x: hidden ;
 }
 /******************** MENU BURGUER *****************/
-.logo-lateral{
-    object-fit: contain;
-    height: 100%;
-    width: 20%;
-    margin-left: 2em;
-}
 
-.logo-lateral img{
-    height: 100%;
-
-}
 
 .nav-bar{
     position: absolute;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    flex-wrap: nowrap;
     left: 0;
     height: 11vh;
     width: 100%;
@@ -68,7 +58,6 @@ body{
     justify-content: end;
     align-items: center;
     width: 80%;
-
     
 }
 
@@ -76,8 +65,35 @@ body{
     color: white;
     font-family: var(--font-title);
     margin-right: 2em;
-    font-size: 1em;
+    font-size: 90%;
 }
+
+.button-header{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    
+}
+
+.button-header a {
+    word-break: keep-all;
+    line-break: loose;
+    background-color: var(--clr-lighttest-brown);
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.349);
+    padding: .2em 1em;
+}
+
+.logo-lateral{
+    display: flex;
+    height: 11vh;
+    top: 0;
+}
+
+.logo-lateral img{
+    height: 11vh;
+   
+}
+
 
 .burguer{
     display: flex;
@@ -91,6 +107,7 @@ body{
     top: 2rem;
     z-index: 100;
     cursor: pointer;
+    visibility: hidden;
 }
 
 @media(max-width: 700px) {
@@ -240,17 +257,6 @@ body{
 /***************** FIM MENU BURGUER ************************/
 
 /******************** LOGO LATERAL ***************************/
-.logo-lateral {
-    position: fixed;
-    z-index: 1;
-    top: 0.2rem;
-    left: 0.3rem;
-}
-
-.logo-lateral img{
-    width: 100px;
-    opacity: 2;
-}
 
 /************************** HEADER *****************************/
 header{
@@ -281,7 +287,7 @@ header{
 
 .carrossel{
     overflow: hidden;
-    height:100%;
+    height:100vh;
     width: 100%;
     
 }
@@ -293,7 +299,7 @@ header{
 }
 
 .carrossel img{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     object-fit: cover;
     animation: zoom  10s ;
