:package: novs atts :up: nova page

--- a/css/parcerias.css
+++ b/css/parcerias.css
@@ -36,7 +36,7 @@
     width: 100%;
     height: 38vh;
     padding: .6em 0 0 0;
-    background-color: var(--cor5);
+    background-color: white;
     margin-bottom: 3em;
     box-shadow: 2px 0px 2px 1px rgba(0, 0, 0, 0.078);
    
