--- a/css/body-sobre.css
+++ b/css/body-sobre.css
@@ -54,7 +54,8 @@ html {
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
-    padding: 0 2em;
+    padding: 0 3em 1em 3em;
+    margin: 2em;
     width: 50%;
 
 }
@@ -67,9 +68,11 @@ html {
 }
 
 .info-sobre h2{
-    font-family: var(--font-title);
-    color: var(--cor0);
-    font-weight: 500;
+    font-family: var(--ff-logo);
+    color: black;
+    font-size: 2em;
+    font-weight: 600;
+    margin-bottom: .5em;
 }
 
 .img-sobre{
@@ -88,3 +91,40 @@ html {
 
 /******************* FIM SECTION SOBRE ************************/
 
+.mais{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10em;
+    margin-top: 2em;
+    background-color: var(--clr-cream);
+    
+}
+
+.div-mais{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+}
+
+.div-mais p, a{
+    font-size: 1.2em;
+    color: black;
+    font-family: var(--font-geral);
+}
+
+.div-mais a {
+    margin-top: .6em;
+    padding:.2em .6em;
+    border: 1px solid;
+    border-radius: .7em;
+}
+
+.div-mais a:hover{
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.537);
+
+}
