--- a/css/header.css
+++ b/css/header.css
@@ -51,7 +51,7 @@ body{
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.24);
 }
 
-.nav-bar nav{
+.nav-links{
     position: absolute;
     right: 0;
     display: flex;
@@ -61,17 +61,23 @@ body{
     
 }
 
-.nav-bar a {
+.nav-bar a, i{
     color: white;
     font-family: var(--font-title);
     margin-right: 2em;
-    font-size: 90%;
+    font-size: 1em;
 }
+
+.usuario i {
+    font-size: 1.5em;
+}
+
 
 .button-header{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    margin: 0;
+    margin: 2px;
     
 }
 
@@ -110,7 +116,7 @@ body{
     visibility: hidden;
 }
 
-@media(max-width: 700px) {
+@media(max-width: 715px) {
 
     .burguer{
         visibility: visible;
@@ -372,43 +378,7 @@ header{
 
 /*mais*/
 
-.mais{
-    display: flex;
-    align-content: center;
-    align-items: center;
-    width: 100%;
-    height: 10em;
-    margin-top: 2em;
-    background-color: var(--clr-cream);
-    
-}
 
-.div-mais{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   
-}
-
-.div-mais p, a{
-    font-size: 1.2em;
-    color: black;
-    font-family: var(--font-geral);
-}
-
-.div-mais a {
-    margin-top: .6em;
-    padding:.2em .6em;
-    border: 1px solid;
-    border-radius: .7em;
-}
-
-.div-mais a:hover{
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.537);
-
-}
 /*********************** FIM HEADER ***************************/
 
 /************************ SIDEBAR *************************/
@@ -433,6 +403,8 @@ header{
     display: flex;
     position: absolute;
     bottom: 2rem;
+    right:0;
+    left: 2.5em;
     width: 100%;
     justify-content: space-evenly;
 }
@@ -460,7 +432,8 @@ header{
 .user{
     position: absolute;
     font-size: 2em;
-    right: 1em;
+    right: 0;
+
     top: .7em;
 
 }
