--- a/css/header.css
+++ b/css/header.css
@@ -32,9 +32,12 @@
 }
 
 body{
+    width: 100%;
     background-color: var(--clr-white);
     overflow-x: hidden ;
 }
+
+
 /******************** MENU BURGUER *****************/
 
 
@@ -65,9 +68,13 @@ body{
     color: white;
     font-family: var(--font-title);
     margin-right: 2em;
-    font-size: 1em;
+    font-size: 1.1em;
 }
 
+.nav-bar a:hover{
+    color:black;
+    transition: .2s ease-in-out;
+}
 .usuario i {
     font-size: 1.5em;
 }
@@ -84,15 +91,23 @@ body{
 .button-header a {
     word-break: keep-all;
     line-break: loose;
-    background-color: var(--clr-lighttest-brown);
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.349);
+    background-color: var(--cor0);
+    border: .1em solid var(--clr-cream);
+    border-radius: .1em;
     padding: .2em 1em;
+}
+
+.button-header a:hover{
+    background-color: var(--clr-cream);
+    border: .1em solid var(--cor0);
+    color: var(--cor0);
 }
 
 .logo-lateral{
     display: flex;
     height: 11vh;
     top: 0;
+    margin-left: 1.5em;
 }
 
 .logo-lateral img{
@@ -268,6 +283,7 @@ body{
 header{
     width: 100%;
     height: 100vh;
+    background: var(--cor3);
     position: relative;
 }
 @keyframes zoom {0%
@@ -295,6 +311,7 @@ header{
     overflow: hidden;
     height:100vh;
     width: 100%;
+
     
 }
 
@@ -308,6 +325,7 @@ header{
     height: 100vh;
     width: 100%;
     object-fit: cover;
+    opacity: .7;
     animation: zoom  10s ;
 }
 
@@ -324,10 +342,10 @@ header{
 .banner h1{
     font-family: var(--ff-logo);
     color: #fff;
-    font-size: 4.5rem;
+    font-size: 5.5em;
     font-weight: 300;
     opacity: 0;
-    text-shadow: 2px 2px 3px  rgba(0, 0, 0, 0.747) ;
+    text-shadow: 2.5px 2.5px 6px rgb(0, 0, 0) ;
     line-height: 3rem;
     margin-bottom: 1rem;
     animation: texto 2s 0.9s forwards;
@@ -336,12 +354,11 @@ header{
 
 .banner p {
     font-family: var(--font-title);
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: var(--cor1);
     font-weight: 400;
-    margin-bottom: 2rem;
     opacity: 0;
-    text-shadow: 2px 2px 3px 1px var(--cor0) ;
+    text-shadow: 2.5px 2.5px 5px rgb(0, 0, 0) ;
     animation: texto 2s 0.9s forwards;
 }
 
