--- a/css/parcerias.css
+++ b/css/parcerias.css
@@ -34,7 +34,6 @@
 
 .parcerias{
     width: 100%;
-    height: 38vh;
     padding: .6em 0 0 0;
     background-color: white;
     margin-bottom: 3em;
@@ -56,19 +55,18 @@
 }
 .container-parcerias{
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 80%;
 
 }
 
 .parceiro{
-    width: 13em;
+    width: 12rem;
     margin-top: 0;
-    padding: .1em;
+    padding: 2em 6em;
 }
-
-
 
 
 
@@ -88,38 +86,12 @@
 
 .img-parceiro#num1{
     width: 130%;
+    padding: 1em -1em;
 }
 
 
- /**FOOTER**/
 
 
-footer{
-    background-color: var(--cor0);
-    width: 100%;
-}
-
-.container-footer{
-    max-width: 1220px;
-}
-.social-media-footer{
-    display: flex;
-    justify-content: end;
-    padding: .6em;
-}
-.social-media-footer ul{
-    display: flex;
-    justify-content: end;
-}
-
-.social-media-footer li i{
-    color: var(--clr-white);
-    display: flex;
-    font-weight: 500;
-    font-size: 1.6em;
-    margin-right: .6em;
-    
-}
 
 
 
