--- a/css/body-produtos.css
+++ b/css/body-produtos.css
@@ -40,13 +40,18 @@
 } 
 
 
+.produtos a {
+    width: 18em;
+    height: 30em;
+}
+
 .produtos {
     width: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
-    margin: 4em 0;
+    margin: 4em 0 6em 0;
     
     
 
@@ -59,7 +64,7 @@
     letter-spacing: .2rem;
     font-weight: 600;
     color: var(--cor0);
-    text-shadow: .05em .05em .05em rgb(119, 119, 119);
+    text-shadow: .05em .05em .1em rgb(189, 189, 189);
 }
 
 .produtos-c {
