--- a/css/footer.css
+++ b/css/footer.css
@@ -42,6 +42,8 @@
 footer{
     width: 100%;
     background-color: var(--cor3);
+    list-style-type: none;
+
 }
 
 .container-footer li, i, h2, h3, b, p{
@@ -67,6 +69,11 @@ footer{
     justify-content: center;
     margin: 2em 0 0 0;
 }
+
+.footer-title{
+    font-weight: bold;
+    
+}
 .footer-item{
     padding: 0 2em;
 }
@@ -82,6 +89,11 @@ footer{
 
 .container-end-footer b{
     font-family: var(--ff-logo);
+}
+
+.copyright{
+    padding-bottom: 1em;
+    
 }
 
 .social-media-footer i{
