--- a/css/info-produtos.css
+++ b/css/info-produtos.css
@@ -30,86 +30,223 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color:#fff4ee;
+}
 
-.bebidas-geladas, .bebidas-quentes, .sobremesas{
+header{
     width: 100%;
-    background-color: var(--cor0);
+    height: 11vh;
+    background-color: var(--cor3);
+    box-shadow: .1em .1em .2em rgb(100, 100, 100);
+}
+
+
+.container-header{
+    height: 100%;
+    display: flex;
+    padding: 0 4em;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+ .link-cardapio h1, .link-cardapio a{
+    font-family: var(--ff-primary);
+    font-size: 1.2em;
+    font-weight: 500;
+    color: white;
+}
+
+.link-cardapio a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    margin-top: .1em;
+    font-weight: bold;
+    background-color: var(--clr-cream);
+}
+
+.canto-esquerdo{
+    height: 100%;
+    display: flex;
+}
+
+.canto-esquerdo h1{
+    display: flex;
+    align-items: center;
+    font-size: 2.3em;
+    margin-left: .4em;
+    font-family: var(--ff-logo);
+    color: white;
+}
+
+.logo-break{
+    height: 100%;
+
+}
+
+.logo-break img {
+    height: 100%;
+    object-fit: cover;
+}
+
+.bebidas-geladas, .bebidas-quentes, .sobremesas, .salgados{
+    width: 100%;
     margin: 3em 0;
 
 }
 
-.container-geladas , .container-quentes, .container-sobremesas{
+.container-geladas , .container-quentes, .container-sobremesas, .container-salgados{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
     padding: 2em;
     
 }
 
-.geladas, .quentes, .sobremesa{
+.geladas, .quentes, .sobremesa , .salgado{
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    max-width: 100%;
-    width: 22em;
-    background-color: var(--clr-white);
-    padding: 1em 2em;
-    margin-right: 2em;
-    margin-bottom: 2em;
-    border-radius: .5em;
-    box-shadow: 2px 3px 2px 1px rgba(0, 0, 0, 0.212);
+    justify-content: space-between;
+    background-color: var(--cor2);
+    width: 17em;
+    height: 22em;
+    margin: 2em 3em;
+    box-shadow: .1em .1em .3em black;
+
+
 
 }
-
-.content{
-    padding: .5em 0;
-}
-
-sup{
-    font-family: var(--ff-primary);
-    font-size: .7em;
-    font-weight: 400;
-    font-style:oblique;
-    margin-left: .5em;
-}
-.content p{
-    font-family: var(--font-geral);
-}
-
-.content h3{
-    padding-bottom: .5em;
-    font-family: var(--font-title);
-    
-}
-.body-geral span, a {
-    padding: .3em;
-    font-family: var(--ff-primary);
-    text-decoration: none;
-    color: black;
-}
-
 
 .img-div{
-    width: 16em;
-    height: 20em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    z-index: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     
 }
 
 .img-div img{
-    width:100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: .8;
+}
+
+.content{
+    position: absolute;
+    top: .5em;
+    left: .5em;
+    display: flex;
+    padding: 2em;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 .5em;
+    z-index: 2;
+
+}
+
+.preco-link{
+    position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    bottom: 1.5em;
+
+    font-size: .7em;
+    font-weight: 400;
+    font-style:oblique;
+    
+}
+
+.content p{
+    font-family: var(--font-geral);
+    color: white;
+    text-shadow: .05em .05em .15em black;
+    font-size: 1em;
+    opacity: 0;
+}
+
+.geladas:hover .content p{
+   opacity: 1;
+   transition: .2s ease-in;
+}
+
+.quentes:hover .content p{
+    opacity: 1;
+    transition: .2s ease-in;
+ }
+
+ .sobremesa:hover .content p{
+    opacity: 1;
+    transition: .2s ease-in;
+ }
+
+.salgado:hover .content p{
+    opacity: 1;
+    transition: .2s ease-in;
+ }
+.content h3{
+    font-size: 1.3em;;
+    letter-spacing: .1em;
+    color: var(--cor1);
+    font-weight: bold;
+    text-shadow: .1em .1em .1em black;
+    font-family: var(--font-title);
+    
+}
+
+.content sup {
+    display: flex;
+    width: 17em;
+    font-size: .6em;
+    padding: .05em .4em;
+    font-weight: bolder;
+    text-shadow: none;
+    background-color: #f4e5b880;
+    color: var(--cor0);
+}
+
+.preco-link span , a {
+    
+    font-family: var(--ff-primary);
+    font-size: 1.6em;;
+    text-decoration: none;
+    color: white;
+}
+
+.preco-link span {
+    margin-right: .4em;
+    color: var(--clr-cream);
+    font-weight: bolder;
+    text-shadow: .1em .1em .2em black;
+}
+
+.preco-link a {
+    color: white;
+    font-weight: 500;
+    font-size: 1.2em;
+    letter-spacing: .07em;
+    padding: .3em .8em;
+    background-color: var(--cor3);
+    border: .1em solid var(--clr-cream);
 }
 
 .body-geral h1{
     font-family: var(--ff-logo);
-    font-size: 2em;
+    font-size: 2.3em;
+    font-weight: bolder;
     display: flex;
     padding-top: 1em;
+    text-shadow: .04em .04em .05em black;
     justify-content: center;
-    color: white;
+    color: var(--cor0);
+}
+
+footer li{
+    list-style: none;
 }
