--- a/css/tecnologia.css
+++ b/css/tecnologia.css
@@ -107,12 +107,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.3em;
+    font-size: 1em;
     color: white;
     background-color: rgb(19, 1, 48);
     border: .1em solid rgb(113, 87, 187);
-    padding: .3em 1em;
-    border-radius: .15em;
+    padding: .4em 1em;
 }
 
 .btn-info-tecnologia a:hover{
@@ -272,7 +271,7 @@
 .info-pcs p, span{
     font-family: var(--font-geral);
     color: black;
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 .info-pcs span{
@@ -297,11 +296,10 @@
     text-decoration: underline;
 }
 
-.reserva-button a:hover{
 
-}
-.opcao-pc-title{
+.tecnologias-disp .opcao-pc-title{ 
     margin-top: 1em;
+    color: black;
     letter-spacing: .1em;
     font-weight: 500;
 }
