--- a/css/footer.css
+++ b/css/footer.css
@@ -39,11 +39,15 @@
     src: url("attentica-ultralight.ttf") format('opentype');
 } 
 
-footer{
+.footer{
     width: 100%;
     background-color: var(--cor3);
     list-style-type: none;
 
+}
+
+.footer li{
+    list-style: none;
 }
 
 .container-footer li, i, h2, h3, b, p{
@@ -56,6 +60,7 @@ footer{
 .container-footer {
     width: 100%;
     height: 100%;
+    background-color: var(--cor3);
 }
 
 .container-top-footer{
@@ -72,7 +77,7 @@ footer{
 
 .footer-title{
     font-weight: bold;
-    
+
 }
 .footer-item{
     padding: 0 2em;
