--- a/css/reserva/style.css
+++ b/css/reserva/style.css
@@ -31,10 +31,36 @@
 
 }
 
+.lateral{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 15em;
+    height: 10vh;
+    z-index: 5;
+}
+
+.lateral p {
+    font-family: var(--font-title);
+    font-size: 1.4em;
+    margin-left: .1em;
+    color: white;
+}
+.logo-lateral {
+
+    height: 10vh;
+    
+}
+
+.logo-lateral img  {
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+}
 
 body{
-    width: 100%;
     height: 100vh;
+    width: 100%;
     background-color: black;
 }
 
@@ -61,20 +87,21 @@ body{
 }
 
 .container-form{
-    background-color: rgba(0, 0, 0, 0.562);
-    border-radius: 2px;
-    padding: 7em 12em;
     position: absolute;
-    display: flex;
-    justify-content: center;
+    margin: auto;
+
    
    
 }
 
 .outro-container{
+    margin: 10em;
+    padding: 2em 3em;
+    background-color: rgba(0, 0, 0, 0.726);
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 
 }
 
@@ -83,23 +110,26 @@ form{
     height: 100%;
     display: flex;
     flex-direction: column;   
+    flex-wrap: wrap;
 
 
 }
 
-.input-geral label, span, ul, input{
+.input-quanthoras label, span, ul, input, .input-geral label, span, ul, input, .planos-input label, span, ul, input{
     font-family: var(--font-geral);
-    font-size: 1.3em;
+    font-size: 1.1em;
     color: white;
 }
 
 ul li{
     list-style: inside;
     margin:0;
+    font-weight: 300;
 }
 form h2{
     font-family: var(--font-title);
     color: white;
+    font-size: 1em;
     text-shadow: .1em .1em .2em black;
 }
 
@@ -109,21 +139,48 @@ form span{
     
     
 }
-.input-geral input{
+
+.principais-inputs{
+    padding-right: 1em;
+    width: 100%;
+}
+
+.input-geral input, .planos-comp input, .input-quanthoras input{
+    color: black;
     font-family: var(--ff-primary);
-    border-radius: .25em ;
+    border-radius: .4em ;
     font-size: 1em;
     width: 8em;
     height: 1.45em;
 }
 
+
+
 .input-geral{
-    padding: .6em 0;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: .5em 0;
 }
 
 .input-geral input{
-    padding: .2em .4em;
+    width: 11em;
+    margin-left: 1em;
+    padding: .9em .3em;
     
+}
+
+.input-quanthoras{
+
+    width: 100%;
+    padding: .5em 0;
+}
+
+.input-quanthoras input{
+    width: 11em;
+    margin-left: 1em;
+    padding: .9em .3em;
 }
 
 .termos-input{
@@ -135,16 +192,65 @@ form span{
 }
 
 .termos-input input{
+    width: 2em;
+    height: 1em;
     margin-right: .3em;
+
 }
 .termos-input p{
     font-family: var(--font-geral);
     color: white;
-    font-weight: 400;
+    font-weight: 200;
     text-align: center;
 }
 
-.input-geral input:hover{
+.input-geral input:hover, .input-quanthoras input:hover, .termos-input input:hover{
     color: black;
     background-color: rgb(218, 218, 218);
+}
+
+#preco h2 {
+    font-family: var(--font-title);
+    color: white;
+    display: flex;
+    justify-content: end;
+}
+
+.planos-comp {
+    margin-top: .3em;
+}
+
+.planos-comp label{
+  font-size: 1em;
+   
+}
+
+.planos-comp input{
+    width: 2em;
+    height: 1em;
+    margin: 0;
+}
+
+.envia-input {
+    margin-top: .5em;
+    display: flex;
+    height: 2em;
+    width: 6em;
+}
+.envia-input input{
+    height: 100%;
+    width: 100%;
+    font-family: var(--font-geral);
+    text-align: center;
+    padding: 0em .3em;
+    color: black;
+    background-color: white;
+}
+
+.envia-input input:hover{
+    cursor:pointer;
+}
+
+.outro-flutter {
+    margin: 1em;
 }
