--- a/css/usuario.css
+++ b/css/usuario.css
@@ -9,7 +9,7 @@
     --cor1: #f4e5b8;
     --cor2: #bd7938;
     --cor3: #662912;
-    --cor4: #C2651A;
+    --cor4: #c2a91a;
     --clr-lighttest-brown: #ac7f64;
     --ff-primary: "Nunito", Helvetica, Arial, sans-serif;
     --ff-logo: "Brixton", sans-serif;
@@ -24,19 +24,108 @@
 } 
 
 
-.nav-links{
-    display: flex;
+
+.nav-links .usuario {
+    font-family: var(--font-title);
+    text-shadow: .1em .1em .2em black;
+    
+    margin-right: 2em;
+    padding: .3em .9em;
+    border: .15em solid var(--cor4);
+    border-radius: 1em;
 }
 
-.usuario{
-    margin: 0;
+.nav-links .usuario:hover{
+    cursor: pointer;
+    border: .15em solid var(--cor4);
+    box-shadow: .03em .03em .3em .1em rgb(255, 237, 132);
+    transition: all .2s ease-in-out;
+}
+
+.usuarioside{
+    position: absolute;
+    display: flex;  
+    width: 12em;
+    height: 17em;
+    top: -17em;
+    right: 2em;
+    background-color: white;
+    z-index: 100;
+}
+.show-reserva .usuarioside{
+    top: 4.7em;
+    animation: opacidade .3s ease-in-out;
+   
+
+}
+
+@keyframes opacidade{
+    0%{
+        opacity: .7;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+.usuarioside::before{
+    position: absolute;
+    right: 1em;
+    content: "";
+    color: white;
+    border-right: 1rem solid white;
+    border-left: 1rem solid white;
+    border-top: 1rem solid white;
+    border-bottom: 1rem solid white;
+    top: -0.5em;
+    z-index: 98;
+    transform: rotate(-135deg);
+}
+.usuarioside h2{
     display: flex;
     justify-content: center;
+    font-size: 1.1em;
+    text-align: center;
+    align-items: center;
+    color: black;
 }
 
-.navlinks.usuario p {
-    font-family: var(--font-geral);
-    text-align: center;
+
+.usuarioside P{
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+    align-items: center;
+    margin: .5em 0em;
     color: black;
-    font-size: 2em;
+
+}
+.reservas{
+    padding: 2em 0em;
+    
+}
+
+.sair{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: .2em .7em;
+    margin-top: 1em;
+}
+
+.sair b{
+    color: black;
+    font-size: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+.sair button{
+    display: flex;
+    color: black;
+    font-size: 1em;
+    padding: .3em 1em;
+    border-radius: 1em;
+    border: .15em solid black;
 }
