--- a/css/usuario.css
+++ b/css/usuario.css
@@ -60,7 +60,7 @@
 }
 
 .container-reservas{
-    position: relative;
+    height: 100%;
     z-index: 100;
     animation: opacidade .3s ease-in-out;
 }
@@ -108,7 +108,7 @@
 }
 .reservas{
     background-color: white;
-    padding: 2em 0em;
+    padding: 1em 0em;
     
 }
 
@@ -123,7 +123,7 @@
     justify-content: center;
     align-items: center;
     padding: .2em;
-    margin-top: 1em;
+
 }
 
 .sair b{
@@ -141,8 +141,15 @@
     background-color: var(--clr-lighttest-brown);
     border-radius: 1em;
     font-size: 1em;
-    padding: .3em 1em;
+    padding: .3em 1.3em;
     border-radius: 1em;
     border: .15em solid black;
     
+}
+
+.sair a:hover{
+    background-color: var(--cor0);
+    border-color: var(--cor1);
+    color: var(--clr-cream);
+    transition: .2s ease-in-out;
 }
